--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "test:watch": "nwb test-react --server"
   },
   "dependencies": {
-    "landing-page-components": "^1.0.0",
+    "landing-page-components": "^1.0.2",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "styled-components": "^3.4.2"
   },
   "devDependencies": {
     "nwb": "0.23.x"
